Added security configs